# tranplex

./: .gitignore  README.rst  pyproject.toml
tests/: test_transplex.py
tests/http/: test_resource.http
transplex/: server.py  transplex_log_handler.py  transplex_thread.py
transplex/console/: __init__.py  console_app.py
transplex/resources/: __init__.py  test_resource.py
ui/: package-lock.json  package.json
ui/public/: index.html
ui/src/: App.vue
ui/src/components/: TransplexFooter.vue  TransplexHeader.vue  TransplexNavigation.vue
ui/src/router/: index.js
ui/src/views/: About.vue  Home.vue
