[tool.poetry]
name = "transplex"
version = "0.1.0"
description = "Transfer files from Plex to USB"
authors = ["Chris Read <centurix@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.0"
requests = "^2.22.0"
flask = "^1.1.1"
cmd2 = "^0.9.22"
colorama = "^0.4.3"
PlexAPI = "^3.3.0"
tqdm = "^4.42.1"
websocket-client = "^0.57.0"

[tool.poetry.dev-dependencies]
pytest = "^4.6"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
